# Mentoria-CS1112-2023-2

./: README.md
sesion1-semana3/e1/: CMakeLists.txt  funcion.cpp  funcion.h  main.cpp
sesion1-semana3/e2/: CMakeLists.txt  main.cpp
sesion1-semana3/e3/: CMakeLists.txt  main.cpp
sesion1-semana3/e4/: CMakeLists.txt  main.cpp
sesion1-semana3/e5/: CMakeLists.txt  main.cpp
sesion1-semana3/e6/: CMakeLists.txt  main.cpp
sesion1-semana3/e7/: CMakeLists.txt  main.cpp
sesion10-semana14/: CMakeLists.txt  main.cpp
sesion10-semana14/archivos/: calificaciones.csv  ejecutivos.csv  programadores.csv
sesion11-semana15/: CMakeLists.txt  alumnos.txt  ciencias.csv  letras.csv  main.cpp  postulantes.csv  profesores.txt
sesion2-semana4/e1/: CMakeLists.txt  main.cpp
sesion3-semana5/: CMakeLists.txt  main.cpp
sesion4-semana6/: CMakeLists.txt  main.cpp
sesion5-semana7/: CMakeLists.txt  main.cpp
sesion6-semana8/: CMakeLists.txt  main.cpp
sesion7-semana10/: Autor.cpp  Autor.h  CMakeLists.txt  Imagen.cpp  Imagen.h  Ingreso.cpp  Ingreso.h  Libro.cpp  Libro.h  Persona.cpp  Persona.h  main.cpp
sesion8-semana11/: Automovil.cpp  Automovil.h  Book.h  CMakeLists.txt  Cliente.h  Empleado.h  Habitacion.h  Hotel.h  Motor.cpp  Motor.h  NewsPaper.h  OBinaria.cpp  OBinaria.h  Persona.h  Resta.cpp  Resta.h  Slot.h  Suma.cpp  Suma.h  Tanque.cpp  Tanque.h  Volumen.h  WareHouse.h  main.cpp
sesion9-semana13/: CMakeLists.txt  main.cpp
