cmake_minimum_required(VERSION 3.25)
project(sesion8_semana11)

set(CMAKE_CXX_STANDARD 17)

add_executable(sesion8_semana11 main.cpp Motor.h Motor.cpp Tanque.h Tanque.cpp Automovil.h Automovil.cpp Resta.h Resta.cpp Suma.h Suma.cpp OBinaria.h OBinaria.cpp Persona.h Empleado.h Cliente.h WareHouse.h Slot.h Habitacion.h Hotel.h Volumen.h Book.h NewsPaper.h)
